--- a/example/src/main/resources/quickstart-dev.html
+++ b/example/src/main/resources/quickstart-dev.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.js"></script>-->
+<script src="leaflet.js" type="text/javascript"></script>
 
 <p>Leaflet1 demo!!!!!</p>
 <div id="mapid" style="width:1000px;height:600px"></div>
